WIFI/Wifi_scan/build/log/idf_py_stdout_output_12948
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\bilal\Videos\esp32\WIFI\Wifi_scan\build\bootloader\esp-idf\esptool_py && c:\esp\esp-tools\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/esp/esp-idf/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/build/bootloader/bootloader.bin"
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\esp\esp-tools\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/build/config -IC:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/inc -IC:/esp/esp-idf/v5.4/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/config/include -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/config/include/freertos -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/config/xtensa/include -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/esp-idf/v5.4/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/dma/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/heap/include -IC:/esp/esp-idf/v5.4/esp-idf/components/heap/tlsf -IC:/esp/esp-idf/v5.4/esp-idf/components/log/include -IC:/esp/esp-idf/v5.4/esp-idf/components/soc/include -IC:/esp/esp-idf/v5.4/esp-idf/components/soc/esp32s3 -IC:/esp/esp-idf/v5.4/esp-idf/components/soc/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/soc/esp32s3/register -IC:/esp/esp-idf/v5.4/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/v5.4/esp-idf/components/hal/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/hal/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_rom/esp32s3 -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_common/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_system/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/v5.4/esp-idf/components/xtensa/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/xtensa/include -IC:/esp/esp-idf/v5.4/esp-idf/components/xtensa/deprecated_include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/esp-idf/v5.4/esp-idf/components/driver/deprecated -IC:/esp/esp-idf/v5.4/esp-idf/components/driver/i2c/include -IC:/esp/esp-idf/v5.4/esp-idf/components/driver/touch_sensor/include -IC:/esp/esp-idf/v5.4/esp-idf/components/driver/twai/include -IC:/esp/esp-idf/v5.4/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_pm/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_ringbuf/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_gpio/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_pcnt/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_gptimer/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_spi/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_mcpwm/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_i2s/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_sdmmc/include -IC:/esp/esp-idf/v5.4/esp-idf/components/sdmmc/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_sdspi/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_sdio/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_dac/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_rmt/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_tsens/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_sdm/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_i2c/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_uart/include -IC:/esp/esp-idf/v5.4/esp-idf/components/vfs/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_ledc/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_parlio/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_wifi/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_wifi/include/local -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_event/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_phy/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_phy/esp32s3/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_netif/include -IC:/esp/esp-idf/v5.4/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/v5.4/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan=. -fmacro-prefix-map=C:/esp/esp-idf/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c: In function 'app_main':
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:14:21: error: implicit declaration of function 'nvs_flash_init' [-Wimplicit-function-declaration]
   14 |     esp_err_t ret = nvs_flash_init();
      |                     ^~~~~~~~~~~~~~
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:15:16: error: 'ESP_ERR_NVS_NO_FREE_PAGES' undeclared (first use in this function)
   15 |     if (ret == ESP_ERR_NVS_NO_FREE_PAGES || ret == ESP_ERR_NVS_NEW_VERSION_FOUND) {
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:15:16: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:15:52: error: 'ESP_ERR_NVS_NEW_VERSION_FOUND' undeclared (first use in this function)
   15 |     if (ret == ESP_ERR_NVS_NO_FREE_PAGES || ret == ESP_ERR_NVS_NEW_VERSION_FOUND) {
      |                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:/esp/esp-idf/v5.4/esp-idf/components/esp_wifi/include/esp_wifi.h:53,
                 from C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:2:
C:/Users/bilal/Videos/esp32/WIFI/Wifi_scan/main/main.c:16:25: error: implicit declaration of function 'nvs_flash_erase' [-Wimplicit-function-declaration]
   16 |         ESP_ERROR_CHECK(nvs_flash_erase());
      |                         ^~~~~~~~~~~~~~~
C:/esp/esp-idf/v5.4/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
